# CoreErlang

./: AUTHORS  CoreErlang.cabal  LICENSE  Makefile  README.org  TEST.org  stack.yaml
Language/CoreErlang/: Parser.lhs  Pretty.lhs
src/Language/CoreErlang/: Parser.lhs  Pretty.lhs  Syntax.lhs
test/: Spec.hs
