name:          CoreErlang
version:       0.0.4
copyright:     2008, David Castro Pérez, Henrique Ferreiro García
               2016, Eric Bailey
license:       BSD3
license-file:  LICENSE
author:        David Castro Pérez <dcastrop@udc.es>
               Henrique Ferreiro García <hferreiro@udc.es>
maintainer:    Alex Kropivny <alex.kropivny@gmail.com>
               Eric Bailey <eric@ericb.me>
homepage:      http://github.com/yurrriq/CoreErlang
category:      Language
synopsis:      Manipulating Core Erlang source code
description:   Facilities for manipulating Core Erlang source code:
               an abstract syntax, parser and pretty-printer.
build-type:    Simple
cabal-version: >= 1.10

extra-source-files: AUTHORS LICENSE

library
  hs-source-dirs:   src
  exposed-modules:  Language.CoreErlang.Parser
                  , Language.CoreErlang.Pretty
                  , Language.CoreErlang.Syntax
  build-depends:    base     >= 4.8    && < 5.0
                  , pretty   >= 1.1    && < 1.2
                  , trifecta >= 1.5    && < 1.7
                  , parsers  >= 0.12.1 && < 1
                  -- Love me in the repl, ideally comment me out before release:
                  , QuickCheck
  other-extensions: DeriveDataTypeable
  default-language:    Haskell2010

test-suite CoreErlang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CoreErlang
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yurrriq/CoreErlang.git
